--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "webpack.config.js",
   "dependencies": {
     "axios": "^0.19.2",
+    "express": "^4.17.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2"
@@ -14,11 +15,13 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
-    "webpack-cli": "^3.3.10",
-    "webpack": "^4.41.5"
+    "nodemon": "^2.0.2",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   },
   "scripts": {
-    "build": "webpack -d --watch"
+    "build": "webpack -d --watch",
+    "start": "nodemon server/index.js"
   },
   "keywords": [],
   "author": "",
