--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2"
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
